--- a/sass/layout/_episodes.scss
+++ b/sass/layout/_episodes.scss
@@ -18,7 +18,8 @@
         &--3,
         &--4{
             width: 100%;
-            height: 22.5rem;
+            height: 16rem;
+            
         }
         
         &--4{
