--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -11,4 +11,5 @@
 
 .fab{
     margin: 1.5rem;
+    cursor: pointer;
 }
