--- a/sass/layout/_invitados-especiales.scss
+++ b/sass/layout/_invitados-especiales.scss
@@ -5,7 +5,7 @@
     }
 
     &__imagenes{
-        
+        cursor: pointer;
        &--photo{
            width: 100%;
           display: block;
